--- a/backgrid experiment/index.html
+++ b/backgrid experiment/index.html
@@ -91,6 +91,6 @@
   <script src="lib/underscore.string.min.js"></script>
   
   <!--<script src="js/script.js"></script>-->
-  <script src="js/test.js"></script>
+  <script src="scripts/test.js"></script>
 </body>
 </html>
