--- a/backgrid experiment/index.html
+++ b/backgrid experiment/index.html
@@ -89,8 +89,7 @@
   
   <script src="lib/bootstrap.min.js"></script>
   <script src="lib/underscore.string.min.js"></script>
-  
-  <!--<script src="js/script.js"></script>-->
-  <script src="scripts/test.js"></script>
+
+  <script src="scripts/script.js"></script>
 </body>
 </html>
