Validations on add-form

--- a/backgrid experiment/index.html
+++ b/backgrid experiment/index.html
@@ -69,7 +69,9 @@
       <section id="example-table"></section>  
     </div>
   </section>
-  
+
+  <!-- TODO make footer look like the one on bootstrapstudio.io...
+      ...and make it stay at the bottom of the screen if the page is not long enough -->
   <footer class="footer hidden-print">
     <div class="container">
       <p class="text-muted">Ștefan Niculae 2015</p>
@@ -78,6 +80,8 @@
   
   <!-- Scripts at the bottom so page loads faster -->
   <script src="lib/jquery-2.1.4.min.js"></script>
+  <script src="lib/jquery.typewatch.js"></script>
+
   <script src="lib/underscore-min.js"></script>
   <script src="lib/backbone-min.js"></script>
   <script src="lib/backgrid.min.js"></script>
