Switched to hint.css, tooltips now properly show on error/warn/success/neutral

--- a/backgrid experiment/index.html
+++ b/backgrid experiment/index.html
@@ -15,7 +15,9 @@
   <link rel="stylesheet" href="css/bootstrap-footer.css">
   <link rel="stylesheet" href="css/bootstrap-custom.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  
+
+  <link rel="stylesheet" href="css/hint.min.css">
+
   <link rel="stylesheet" href="css/old_style.css">
   <link rel="stylesheet" href="css/style.css">
   
@@ -63,6 +65,13 @@
   
   
   <section id="content" class="container">
+
+    <form>
+      <span class="hint--top" data-hint="tooltip"><input type="text"></span>
+    </form>
+    <!--<a href="#" class="hint&#45;&#45;top" data-hint="Yeah, I am &gt;:D">Look, there is something over me.</a>-->
+
+
     <h1>Revenue</h1>      
 <!--      <button type='button' class='btn btn-success'><i class='fa fa-plus fa-lg'></i></button>-->
     <div class="container-fluid">
