--- a/backgrid experiment/index.html
+++ b/backgrid experiment/index.html
@@ -27,7 +27,6 @@
   <!-- Fixed navbar -->
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -66,9 +65,112 @@
   
   <section id="content" class="container">
     <h1>Revenue</h1>
-<!--      <button type='button' class='btn btn-success'><i class='fa fa-plus fa-lg'></i></button>-->
+
     <div class="container-fluid">
-      <section id="example-table"></section>  
+      <section id="example-table">
+
+        <section class="above-rows">
+          <!--<div class="row">-->
+            <!--<div class="col-lg-1">b</div>-->
+
+            <div class="row control-row col-lg-10">
+
+              <div class="col-xs-1 filter-cols">
+                <button class="btn btn-primary"><i class="fa fa-filter fa-lg"></i></button>
+              </div>
+
+              <div class="col-xs-1 add-cols">
+                <button class="btn btn-default"><i class="fa fa-plus fa-lg"></i></button>
+              </div>
+            </div>
+
+            <div class="row entry-row col-lg-10">
+              <form class="form-inline entry-form" action="">
+                <div class="form-group">
+                  <span class="hint--top hint--rounded">
+                    <input placeholder="Auto ID" disabled
+                           data-hint="The ID is generated automatically"
+                           type="text"
+                           class="form-control">
+                  </span>
+                </div>
+
+                <div class="form-group">
+                  <span class="hint--top hint--rounded"
+                        data-hint="A digit followed by a letter or 'bis'">
+                    <input placeholder="Parcel"
+                           validation-req
+                           validation-regex="locationIdentifier"
+                           type="text"
+                           class="form-control">
+                  </span>
+                </div>
+
+                <div class="form-group">
+                  <span class="hint--top hint--rounded"
+                        data-hint="A digit followed by a letter or 'bis'">
+                    <input placeholder="Row"
+                           validation-req
+                           validation-regex="locationIdentifier"
+                           type="text"
+                           class="form-control">
+                  </span>
+                </div>
+
+                <div class="form-group">
+                  <span class="hint--top hint--rounded"
+                        data-hint="A digit followed by a letter or 'bis'">
+                  <input placeholder="Column"
+                         validation-req
+                         validation-regex="locationIdentifier"
+                         type="text"
+                         class="form-control">
+                  </span>
+                </div>
+
+                <div class="form-group">
+                  <span class="hint--top hint--rounded"
+                        data-hint="A year like 2015, 15 or '15">
+                    <input placeholder="Year"
+                           validation-req
+                           validation-regex="year"
+                           validation-warn="closeYear"
+                           type="text"
+                           class="form-control">
+                  </span>
+                </div>
+
+                <div class="form-group">
+                  <span class="hint--top hint--rounded"
+                        data-hint="A number up to 6 digits long">
+                    <input placeholder="Value"
+                           validation-req
+                           validation-regex="currency"
+                           type="text"
+                           class="form-control">
+                  </span>
+                </div>
+
+                <div class="form-group">
+                  <span class="hint--top hint--rounded"
+                        data-hint="A number up to 3 digits long, followed by a slash (/) and then a year, like 2015, 15 or '15">
+                    <input placeholder="Receipt"
+                           validation-req
+                           validation-regex="numberPerYear"
+                           type="text"
+                           class="form-control">
+                  </span>
+                </div>
+
+                <button type="submit" class="btn btn-success add-button"><i class="fa fa-plus fa-lg"></i></button>
+              </form>
+            </div>
+
+            <!--<div class="col-lg-1">a</div>-->
+          <!--</div>-->
+        </section>
+
+      </section>
     </div>
   </section>
 
@@ -76,10 +178,11 @@
       ...and make it stay at the bottom of the screen if the page is not long enough -->
   <footer class="footer hidden-print">
     <div class="container">
-      <p class="text-muted">Ștefan Niculae 2015</p>
+      <p class="text-muted">Ștefan Niculae 2016</p>
     </div>
   </footer>
-  
+
+
   <!-- Scripts at the bottom so page loads faster -->
   <script src="lib/jquery-2.1.4.min.js"></script>
   <script src="lib/jquery.typewatch.js"></script>
