--- a/jsgrid experiment/index.html
+++ b/jsgrid experiment/index.html
@@ -14,6 +14,7 @@
   <!-- Custom css-->
   <link rel="stylesheet" href="style/bootstrap-footer.css">
   <link rel="stylesheet" href="style/bootstrap-custom.css">
+  <link rel="stylesheet" href="style/jsgrid-custom.css">
 
   <title>jsGrid Experiment</title>
 </head>
@@ -94,6 +95,8 @@
   <script src="lib/scripts/bootstrap.min.js"></script>
   <script src="lib/scripts/underscore-min.js"></script>
   <script src="lib/scripts/jsgrid.min.js"></script>
+
+  <script src="scripts/gird-features.js"></script>
 
 </body>
 </html>
