lib/ folder clashed with .gitignore, renamed to libs/

--- a/jsgrid experiment/index.html
+++ b/jsgrid experiment/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Lib css -->
-  <link rel="stylesheet" href="lib/style/bootstrap.min.css">
-  <link rel="stylesheet" href="lib/style/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="lib/style/font-awesome.min.css">
-  <link rel="stylesheet" href="lib/style/jsgrid.min.css">
-  <link rel="stylesheet" href="lib/style/jsgrid-theme.min.css">
+  <link rel="stylesheet" href="libs/style/bootstrap.min.css">
+  <link rel="stylesheet" href="libs/style/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="libs/style/font-awesome.min.css">
+  <link rel="stylesheet" href="libs/style/jsgrid.min.css">
+  <link rel="stylesheet" href="libs/style/jsgrid-theme.min.css">
 
   <!-- Custom css-->
   <link rel="stylesheet" href="style/bootstrap-footer.css">
@@ -91,11 +91,12 @@
   </footer>
 
   <!-- Scripts at the bottom so page loads faster -->
-  <script src="lib/scripts/jquery-2.2.0.min.js"></script>
-  <script src="lib/scripts/bootstrap.min.js"></script>
-  <script src="lib/scripts/underscore-min.js"></script>
-  <script src="lib/scripts/jsgrid.min.js"></script>
+  <script src="libs/scripts/jquery-2.2.0.min.js"></script>
+  <script src="libs/scripts/bootstrap.min.js"></script>
+  <script src="libs/scripts/underscore-min.js"></script>
+  <script src="libs/scripts/jsgrid.min.js"></script>
 
+  <script src="scripts/utils.js"></script>
   <script src="scripts/gird-features.js"></script>
 
 </body>
